# site

./: README.md  TODO.txt  cabal.project  channels.scm  deploy.sh  index.html  index.md  link-notes.sh  manifest.scm  my-site.cabal  notes  site.cabal  site.hs  watch.sh
css/: default.css
notes/: 726w.md  gp69.md  mwpp.md  pzv7.md  sr6j.md
templates/: default.html  index.html  note-list.html  note.html  notes.html  sidebar.html
