cabal-version:      3.4
name:               site
version:            0.1.0.0
license:            CC-BY-NC-SA-4.0
license-file:       LICENSE
build-type:         Simple

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.16.*
                  , blaze-html
                  , blaze-markup
                  , binary
                  , pandoc
                  , pandoc-types
                  , text
                  , filepath
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
